--- a/src/index2.html
+++ b/src/index2.html
@@ -13,6 +13,7 @@
 <body>
 <div class="page">
     <div class="sidebar">
+        <div class="sidebar__layout"></div>
         <div class="sidebar__control">
             <div class="sidebar__control-list">
                 <div class="sidebar__filter">
@@ -185,163 +186,47 @@
                         <path d="M28 56C12.5599 56 0 43.4401 0 28C0 12.5599 12.5599 0 28 0C43.4401 0 56 12.562 56 28C56 43.438 43.4401 56 28 56ZM28 4.3377C14.9543 4.3377 4.3377 14.9521 4.3377 28C4.3377 41.0479 14.9543 51.6623 28 51.6623C41.0479 51.6623 51.6623 41.0479 51.6623 28C51.6623 14.9521 41.0457 4.3377 28 4.3377Z"/>
                         <path d="M38.8088 25.9997L28.9146 35.8571C28.1428 36.622 26.8962 36.622 26.1244 35.8571L16.2302 25.9997C15.5951 25.2624 15.5951 24.1721 16.2302 23.4348C16.9406 22.6087 18.1912 22.5122 19.0204 23.22L27.5096 31.6775L36.0186 23.2199C36.7904 22.4549 38.037 22.4549 38.8088 23.2199C39.5766 23.9888 39.5766 25.2309 38.8088 25.9997Z"/>
                     </svg>
+
                 </div>
             </div>
         </div>
     </div>
-    <div class="content">
-        <div class="content__account">
-            <div class="content__avatar">
-                <img src="./images/avatar.png" alt="ava">
-                <div class="content__all-photos">
-                    <img src="./images/mini-ava.png" alt="mini-ava">
-                    <img src="./images/mini-ava.png" alt="mini-ava">
-                    <img src="./images/mini-ava.png" alt="mini-ava">
+    <div class="new-user">
+        <div class="new-user__nav">
+            <div class="new-user__title">
+                <h1>Новый пользователь</h1>
+            </div>
+            <div class="new-user__control">
+                <button>Сохранить</button>
+                <div>
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.6571 15L29.6565 2.00058C30.1142 1.5429 30.1142 0.800873 29.6565 0.343256C29.1989 -0.11436 28.4568 -0.114419 27.9992 0.343256L14.9997 13.3427L2.00033 0.343256C1.54266 -0.114419 0.800628 -0.114419 0.343012 0.343256C-0.114604 0.800931 -0.114663 1.54296 0.343012 2.00058L13.3424 15L0.343012 27.9995C-0.114663 28.4571 -0.114663 29.1992 0.343012 29.6568C0.57182 29.8856 0.871761 30 1.1717 30C1.47164 30 1.77152 29.8856 2.00039 29.6568L14.9997 16.6574L27.9991 29.6568C28.228 29.8856 28.5279 30 28.8278 30C29.1278 30 29.4277 29.8856 29.6565 29.6568C30.1142 29.1991 30.1142 28.4571 29.6565 27.9995L16.6571 15Z" fill="black"/>
+                    </svg>
                 </div>
             </div>
-            <div class="content__progress-account">
-                <p>
-                    профиль заполнен на
-                </p>
-                <svg class="content__tooltip" width="54" height="50" viewBox="0 0 54 50" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M48.1819 0H5.8185C2.60994 0 0 2.41661 0 5.3875V34.1217C0 37.0922 2.60994 39.5088 5.8185 39.5088H19.2443L23.6905 47.7428C24.465 49.1772 25.6713 50 27 50C28.3287 50 29.535 49.1772 30.3095 47.7428L34.7561 39.5088H48.1819C51.3901 39.5088 54 37.0922 54 34.1217V5.3875C54 2.41661 51.3901 0 48.1819 0V0ZM50.8359 34.1217C50.8359 35.4767 49.6453 36.5791 48.1819 36.5791H33.7784C33.179 36.5791 32.6315 36.8927 32.3633 37.389L27.4796 46.4325C27.2826 46.7972 27.0976 46.9765 27 47.0451C26.9024 46.9765 26.7174 46.7972 26.5204 46.4325L21.6367 37.389C21.369 36.8927 20.821 36.5791 20.222 36.5791H5.8185C4.35471 36.5791 3.16406 35.4767 3.16406 34.1217V5.3875C3.16406 4.03214 4.35471 2.92969 5.8185 2.92969H48.1819C49.6453 2.92969 50.8359 4.03214 50.8359 5.3875V34.1217Z"
-                          fill="#00C96F"/>
-                    <path d="M15.4523 27.2C13.879 27.2 12.5857 26.8267 11.5723 26.08C10.559 25.3333 10.0523 24.3467 10.0523 23.12C10.0523 21.56 10.8057 20.4333 12.3123 19.74C11.1257 19.02 10.5323 17.9867 10.5323 16.64C10.5323 15.5467 10.9857 14.6333 11.8923 13.9C12.8123 13.1667 13.999 12.8 15.4523 12.8C16.919 12.8 18.1057 13.1667 19.0123 13.9C19.919 14.6333 20.3723 15.56 20.3723 16.68C20.3723 18 19.779 19.02 18.5923 19.74C19.3523 20.14 19.919 20.5933 20.2923 21.1C20.6657 21.6067 20.8523 22.2667 20.8523 23.08C20.8523 24.3467 20.3457 25.3533 19.3323 26.1C18.3323 26.8333 17.039 27.2 15.4523 27.2ZM13.9923 18.24C14.3657 18.56 14.8523 18.72 15.4523 18.72C16.0523 18.72 16.5323 18.56 16.8923 18.24C17.2657 17.92 17.4523 17.5 17.4523 16.98C17.4523 16.5267 17.2657 16.14 16.8923 15.82C16.5323 15.5 16.0523 15.34 15.4523 15.34C14.839 15.34 14.3523 15.5 13.9923 15.82C13.6323 16.14 13.4523 16.5333 13.4523 17C13.4523 17.4933 13.6323 17.9067 13.9923 18.24ZM15.4523 24.66C16.199 24.66 16.7857 24.4933 17.2123 24.16C17.6523 23.8267 17.8723 23.4 17.8723 22.88C17.8723 22.3467 17.6457 21.9267 17.1923 21.62C16.7523 21.3133 16.1723 21.16 15.4523 21.16C14.7323 21.16 14.1457 21.32 13.6923 21.64C13.2523 21.9467 13.0323 22.3733 13.0323 22.92C13.0323 23.4133 13.2523 23.8267 13.6923 24.16C14.1323 24.4933 14.719 24.66 15.4523 24.66ZM27.97 27.24C25.69 27.24 23.87 26.4333 22.51 24.82L24.63 22.8C25.63 23.92 26.7567 24.48 28.01 24.48C28.5967 24.48 29.07 24.3267 29.43 24.02C29.8033 23.7 29.99 23.2733 29.99 22.74C29.99 22.1667 29.75 21.7267 29.27 21.42C28.79 21.1133 28.1167 20.96 27.25 20.96H25.97L25.49 19L28.83 15.64H23.33V13H32.79V15.32L29.25 18.7C31.7567 19.1267 33.01 20.4467 33.01 22.66C33.01 24.0067 32.55 25.1067 31.63 25.96C30.7233 26.8133 29.5033 27.24 27.97 27.24ZM38.7079 21.358C38.2879 21.8527 37.7559 22.1 37.1119 22.1C36.4679 22.1 35.9359 21.8573 35.5159 21.372C35.1052 20.8773 34.8999 20.2847 34.8999 19.594C34.8999 18.9127 35.1099 18.3247 35.5299 17.83C35.9499 17.3353 36.4865 17.088 37.1399 17.088C37.7839 17.088 38.3112 17.3353 38.7219 17.83C39.1325 18.3153 39.3379 18.9033 39.3379 19.594C39.3379 20.2753 39.1279 20.8633 38.7079 21.358ZM35.9079 27L43.1039 17.2H44.0979L36.9159 27H35.9079ZM42.8799 27.112C42.2359 27.112 41.7085 26.8693 41.2979 26.384C40.8872 25.8893 40.6819 25.2967 40.6819 24.606C40.6819 23.9247 40.8919 23.3367 41.3119 22.842C41.7319 22.3473 42.2639 22.1 42.9079 22.1C43.5519 22.1 44.0792 22.3473 44.4899 22.842C44.9005 23.3273 45.1059 23.9153 45.1059 24.606C45.1059 25.2967 44.8959 25.8893 44.4759 26.384C44.0652 26.8693 43.5332 27.112 42.8799 27.112ZM37.1399 21.316C37.5132 21.316 37.8165 21.1527 38.0499 20.826C38.2925 20.49 38.4139 20.0793 38.4139 19.594C38.4139 19.1087 38.2879 18.7027 38.0359 18.376C37.7839 18.04 37.4759 17.872 37.1119 17.872C36.7385 17.872 36.4305 18.04 36.1879 18.376C35.9545 18.7027 35.8379 19.1087 35.8379 19.594C35.8379 20.0793 35.9639 20.49 36.2159 20.826C36.4679 21.1527 36.7759 21.316 37.1399 21.316ZM42.9079 26.328C43.2905 26.328 43.5985 26.1647 43.8319 25.838C44.0652 25.5113 44.1819 25.1007 44.1819 24.606C44.1819 24.1207 44.0559 23.7147 43.8039 23.388C43.5519 23.052 43.2439 22.884 42.8799 22.884C42.5065 22.884 42.1985 23.052 41.9559 23.388C41.7225 23.7147 41.6059 24.1207 41.6059 24.606C41.6059 25.0913 41.7319 25.502 41.9839 25.838C42.2359 26.1647 42.5439 26.328 42.9079 26.328Z"
-                          fill="#333333"/>
-                </svg>
+        </div>
+        <div class="new-user__steps">
+            <div class="new-user__step">
+                <div>
+                    <p>Шаг 1</p>
+                    <br>
 
-                <svg class="content__progress-bar" width="626" height="30" viewBox="0 0 626 30" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <rect width="626" height="30" rx="15" fill="url(#paint0_linear)" fill-opacity="0.12"/>
-                    <rect width="481" height="30" rx="15" fill="url(#paint1_linear)"/>
-                    <defs>
-                        <linearGradient id="paint0_linear" x1="0" y1="14.9999" x2="626" y2="14.9999"
-                                        gradientUnits="userSpaceOnUse">
-                            <stop offset="0" stop-color="#01A98C"/>
-                            <stop offset="1" stop-color="#00CF6A"/>
-                        </linearGradient>
-                        <linearGradient id="paint1_linear" x1="112.5" y1="15" x2="385.5" y2="15"
-                                        gradientUnits="userSpaceOnUse">
-                            <stop offset="0" stop-color="#00A98C"/>
-                            <stop offset="1" stop-color="#00CF6A"/>
-                        </linearGradient>
-                    </defs>
-                </svg>
-
-            </div>
-            <div class="content__info">
-                <div class="content__navbar">
-                    <ul>
-                        <li>
-                            <a href="#">Основное</a>
-                        </li>
-                        <li>
-                            <a href="#">Личное</a>
-                        </li>
-                        <li>
-                            <a class="active" href="#">Stack</a>
-                        </li>
-                    </ul>
-                    <div class="content__action">
-                        <div class="vertical-separator"></div>
-                        <div class="shadow-box">
-                            <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
-                                      fill="#01CC6E"/>
-                                <path d="M11 25.2495V29H14.7505L25.8171 17.9334L22.0665 14.1829L11 25.2495Z"
-                                      fill="#ffffff"/>
-                                <path d="M28.7075 13.6279L26.3721 11.2925C25.9821 10.9025 25.3469 10.9025 24.9569 11.2925L23.1266 13.1228L26.8772 16.8733L28.7074 15.0431C29.0975 14.653 29.0975 14.0179 28.7075 13.6279Z"
-                                      fill="#ffffff"/>
-                            </svg>
-                        </div>
-
-                    </div>
-
+                    <p>основное</p>
                 </div>
-                <div class="separator content-separator"></div>
-                <div class="content__tabs-content">
-                    <div class="content__stack">
-                        <div class="circle">
-                            <div class="flex-wrapper">
-                                <div class="single-chart">
-                                    <svg width="100%" height="100%" viewbox="0 0 36 36" class="circular-chart-info red">
-                                        <path class="circle-bg"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
+            </div>
+            <div class="new-user__step">
+                <div>
+                    <p>Шаг 2</p>
+                    <br>
 
-                                        <path transform="scale(-1,1)" class="circle"
-                                              stroke-dasharray="44, 100"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
-                                        <text x="18" y="21" class="percentage">44</text>
-                                    </svg>
-                                </div>
-
-                            </div>
-                        </div>
-                        <hr class="hr-red">
-                        <p>Верстка</p>
-                    </div>
-                    <div class="content__stack">
-                        <div class="circle">
-                            <div class="flex-wrapper">
-                                <div class="single-chart">
-                                    <svg width="100%" height="100%" viewbox="0 0 36 36"
-                                         class="circular-chart-info green">
-                                        <path class="circle-bg"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
-
-                                        <path transform="scale(-1,1)" class="circle"
-                                              stroke-dasharray="87, 100"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
-                                        <text x="18" y="21" class="percentage">87</text>
-                                    </svg>
-                                </div>
-
-                            </div>
-                        </div>
-                        <hr class="hr-red" >
-                        <p>Frontend</p>
-                    </div>
-                    <div class="content__stack">
-                        <div class="circle">
-                            <div class="flex-wrapper">
-                                <div class="single-chart">
-                                    <svg width="100%" height="100%" viewbox="0 0 36 36"
-                                         class="circular-chart-info orange">
-                                        <path class="circle-bg"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
-
-                                        <path transform="scale(-1,1)" class="circle"
-                                              stroke-dasharray="61, 100"
-                                              d="M18 2.0845
-          a 1 1 0 0 1 0 31.831
-          a 1 1 0 0 1 0 -31.831"
-                                        />
-                                        <text x="18" y="21" class="percentage">61</text>
-                                    </svg>
-                                </div>
-
-                            </div>
-                        </div>
-                        <hr class="hr-red" >
-                        <p>Backend</p>
-                    </div>
+                    <p>личное</p>
+                </div>
+            </div>
+            <div class="new-user__step">
+                <div>
+                    <p>Шаг 3</p>
+                    <br>
+                    <p>stack</p>
                 </div>
             </div>
         </div>
