--- a/src/index2.html
+++ b/src/index2.html
@@ -14,16 +14,17 @@
 <div class="page">
     <div class="sidebar">
         <div class="sidebar__layout"></div>
+
         <div class="sidebar__control">
             <div class="sidebar__control-list">
                 <div class="sidebar__filter">
-                    <svg width="45" height="31" viewBox="0 0 45 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="2.8125rem" height="1.9375rem" viewBox="0 0 45 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M17.5 31H27.5V26.625H17.5V31ZM0 4.75V9.125H45V4.75H0ZM7.5 20.0625H37.5V15.6875H7.5V20.0625Z"
                               fill="#B4B4B4"/>
                     </svg>
                 </div>
                 <div class="sidebar__sort">
-                    <svg width="37" height="36" viewBox="0 0 37 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="2.3125rem" height="2.25rem" viewBox="0 0 37 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M6.42344 7.54513V25.4973H9.85136V7.54513L13.5008 11.9432L16.2749 10.1798L8.13743 0.375L0 10.1798L2.77404 11.9432L6.42344 7.54513Z"
                               fill="#B4B4B4"/>
                         <path d="M30.2282 28.205V10.2527H26.8002V28.2051L23.1502 23.8068L20.3762 25.5702L28.5142 35.375L36.6511 25.5692L33.877 23.8078L30.2282 28.205Z"
@@ -33,7 +34,7 @@
             </div>
             <div class="sidebar__add-user">
                 <div class="shadow-box">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="2.5rem" height="2.5rem" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
                               fill="#01CC6E"/>
                         <path d="M19 11C16.2425 11 14 12.8314 14 15.0833V16.4445C14 17.287 14.3142 18.0703 14.8517 18.7216C12.355 19.8976 10.6667 22.093 10.6667 24.6111V25.2917C10.6667 26.4173 11.7884 27.3333 13.1667 27.3333H20.6667C21.1275 27.3333 21.5001 27.0285 21.5001 26.6528C21.5001 26.2771 21.1275 25.9722 20.6667 25.9722H13.1667C12.7067 25.9722 12.3334 25.6667 12.3334 25.2917V24.6112C12.3334 22.4749 13.8484 20.6231 16.0467 19.7322C16.8759 20.2297 17.895 20.5278 19 20.5278C21.7576 20.5278 24.0001 18.6964 24.0001 16.4445V15.0833C24.0001 12.8314 21.7576 11 19 11ZM22.3334 16.4445C22.3334 17.9457 20.8384 19.1667 19.0001 19.1667C17.1618 19.1667 15.6667 17.9457 15.6667 16.4445V15.0833C15.6667 13.582 17.1617 12.3611 19 12.3611C20.8384 12.3611 22.3334 13.582 22.3334 15.0833V16.4445Z"
@@ -126,13 +127,13 @@
                         </div>
                     </div>
                     <div class="sidebar__checked">
-                        <svg width="40" height="30" viewBox="0 0 40 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="2.5rem" height="1.875rem" viewBox="0 0 40 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M39.4143 0.598279C38.6333 -0.199426 37.367 -0.199426 36.5858 0.598279L12.6246 25.0693L3.41426 15.6632C2.63324 14.8655 1.36699 14.8655 0.58582 15.6632C-0.195274 16.4608 -0.195274 17.754 0.58582 18.5517L11.2104 29.402C11.9911 30.1996 13.2583 30.1991 14.0388 29.402L39.4143 3.48687C40.1954 2.68924 40.1953 1.39598 39.4143 0.598279Z"
                                   fill="white"/>
                         </svg>
                     </div>
                     <div class="sidebar__checked-mobile">
-                        <svg width="40" height="30" viewBox="0 0 40 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="2.5rem" height="1.875rem" viewBox="0 0 40 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M39.4143 0.598279C38.6333 -0.199426 37.367 -0.199426 36.5858 0.598279L12.6246 25.0693L3.41426 15.6632C2.63324 14.8655 1.36699 14.8655 0.58582 15.6632C-0.195274 16.4608 -0.195274 17.754 0.58582 18.5517L11.2104 29.402C11.9911 30.1996 13.2583 30.1991 14.0388 29.402L39.4143 3.48687C40.1954 2.68924 40.1953 1.39598 39.4143 0.598279Z"
                                   fill="white"/>
                         </svg>
@@ -176,17 +177,16 @@
             </div>
             <div class="sidebar__slider-btn">
                 <div>
-                    <svg width="57" height="56" viewBox="0 0 57 56" fill="#B4B4B4" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="3.5625rem" height="3.5rem" viewBox="0 0 57 56" fill="#B4B4B4" xmlns="http://www.w3.org/2000/svg">
                         <path d="M28.875 0C44.3151 0 56.875 12.5599 56.875 28C56.875 43.4401 44.3151 56 28.875 56C13.4349 56 0.875 43.438 0.875 28C0.875 12.562 13.4349 0 28.875 0ZM28.875 51.6623C41.9207 51.6623 52.5373 41.0479 52.5373 28C52.5373 14.9521 41.9207 4.3377 28.875 4.3377C15.8271 4.3377 5.2127 14.9521 5.2127 28C5.2127 41.0479 15.8293 51.6623 28.875 51.6623Z"/>
                         <path d="M18.0662 30.0003L27.9604 20.1429C28.7322 19.378 29.9788 19.378 30.7506 20.1429L40.6448 30.0003C41.2799 30.7376 41.2799 31.8279 40.6448 32.5652C39.9344 33.3913 38.6838 33.4878 37.8546 32.78L29.3654 24.3225L20.8564 32.7801C20.0846 33.5451 18.838 33.5451 18.0662 32.7801C17.2984 32.0112 17.2984 30.7691 18.0662 30.0003Z"/>
                     </svg>
                 </div>
                 <div>
-                    <svg width="56" height="56" viewBox="0 0 56 56" fill="#B4B4B4" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="3.5rem" height="3.5rem" viewBox="0 0 56 56" fill="#B4B4B4" xmlns="http://www.w3.org/2000/svg">
                         <path d="M28 56C12.5599 56 0 43.4401 0 28C0 12.5599 12.5599 0 28 0C43.4401 0 56 12.562 56 28C56 43.438 43.4401 56 28 56ZM28 4.3377C14.9543 4.3377 4.3377 14.9521 4.3377 28C4.3377 41.0479 14.9543 51.6623 28 51.6623C41.0479 51.6623 51.6623 41.0479 51.6623 28C51.6623 14.9521 41.0457 4.3377 28 4.3377Z"/>
                         <path d="M38.8088 25.9997L28.9146 35.8571C28.1428 36.622 26.8962 36.622 26.1244 35.8571L16.2302 25.9997C15.5951 25.2624 15.5951 24.1721 16.2302 23.4348C16.9406 22.6087 18.1912 22.5122 19.0204 23.22L27.5096 31.6775L36.0186 23.2199C36.7904 22.4549 38.037 22.4549 38.8088 23.2199C39.5766 23.9888 39.5766 25.2309 38.8088 25.9997Z"/>
                     </svg>
-
                 </div>
             </div>
         </div>
@@ -209,27 +209,87 @@
             <div class="new-user__step">
                 <div>
                     <p>Шаг 1</p>
-                    <br>
-
                     <p>основное</p>
                 </div>
             </div>
             <div class="new-user__step">
                 <div>
                     <p>Шаг 2</p>
-                    <br>
-
                     <p>личное</p>
                 </div>
             </div>
             <div class="new-user__step">
                 <div>
                     <p>Шаг 3</p>
-                    <br>
                     <p>stack</p>
                 </div>
             </div>
         </div>
+        <div class="new-user__add-photo">
+            <div class="new-user__title">
+                <h1>Загрузите фото</h1>
+            </div>
+            <div class="new-user__drop-items">
+                <div class="new-user__drop new-user__drop__image">
+                    <svg width="85" height="79" viewBox="0 0 85 79" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z" fill="white"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8996 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.068 39.9073 41.4092 39.6347Z" fill="white"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2887 39.33 40.1659 39.33 39.4753 40.0207C38.7846 40.7113 38.7846 41.834 39.4753 42.5247L46.5587 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z" fill="white"/>
+                    </svg>
+
+                    <img src="images/drop-images.png" alt="avatar">
+                </div>
+                <div class="new-user__drop">
+                    <svg width="85" height="79" viewBox="0 0 85 79" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z" fill="#00CF6A"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8995 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.0679 39.9073 41.4092 39.6347Z" fill="#00CF6A"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2886 39.33 40.1659 39.33 39.4752 40.0207C38.7846 40.7113 38.7846 41.834 39.4752 42.5247L46.5586 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z" fill="#00CF6A"/>
+                    </svg>
+                </div>
+                <div class="new-user__drop">
+                    <svg width="85" height="79" viewBox="0 0 85 79" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z" fill="#00CF6A"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8995 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.0679 39.9073 41.4092 39.6347Z" fill="#00CF6A"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2886 39.33 40.1659 39.33 39.4752 40.0207C38.7846 40.7113 38.7846 41.834 39.4752 42.5247L46.5586 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z" fill="#00CF6A"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="new-user__form">
+            <div class="new-user__title">
+                <h1>Заполните форму</h1>
+            </div>
+            <div class="new-user__inputs">
+
+
+
+                <div class="new-user__input-wrapper">
+                    <div class="new-user__input-data">
+                        <input type="text" required>
+                        <label>Ваше имя</label>
+                    </div>
+                </div>
+
+
+                <div class="new-user__input-wrapper">
+                    <div class="new-user__input-data">
+                        <input type="text" required>
+                        <label>Ваша фамилия</label>
+                    </div>
+                </div>
+
+
+                <div class="new-user__input-wrapper">
+                    <div class="new-user__input-data">
+                        <input type="text" required>
+                        <label style="letter-spacing: -.09rem;">Ваша должность</label>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
     </div>
 </div>
 </body>
