--- a/src/index.html
+++ b/src/index.html
@@ -178,21 +178,21 @@
                     </div>
                 </div>
             </div>
-            <div class="sidebar__slider-btn">
-                <div>
-                    <svg width="3.5625rem" height="3.5rem" viewBox="0 0 57 56" fill="#B4B4B4"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M28.875 0C44.3151 0 56.875 12.5599 56.875 28C56.875 43.4401 44.3151 56 28.875 56C13.4349 56 0.875 43.438 0.875 28C0.875 12.562 13.4349 0 28.875 0ZM28.875 51.6623C41.9207 51.6623 52.5373 41.0479 52.5373 28C52.5373 14.9521 41.9207 4.3377 28.875 4.3377C15.8271 4.3377 5.2127 14.9521 5.2127 28C5.2127 41.0479 15.8293 51.6623 28.875 51.6623Z"/>
-                        <path d="M18.0662 30.0003L27.9604 20.1429C28.7322 19.378 29.9788 19.378 30.7506 20.1429L40.6448 30.0003C41.2799 30.7376 41.2799 31.8279 40.6448 32.5652C39.9344 33.3913 38.6838 33.4878 37.8546 32.78L29.3654 24.3225L20.8564 32.7801C20.0846 33.5451 18.838 33.5451 18.0662 32.7801C17.2984 32.0112 17.2984 30.7691 18.0662 30.0003Z"/>
-                    </svg>
-                </div>
-                <div>
-                    <svg width="3.5rem" height="3.5rem" viewBox="0 0 56 56" fill="#B4B4B4"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M28 56C12.5599 56 0 43.4401 0 28C0 12.5599 12.5599 0 28 0C43.4401 0 56 12.562 56 28C56 43.438 43.4401 56 28 56ZM28 4.3377C14.9543 4.3377 4.3377 14.9521 4.3377 28C4.3377 41.0479 14.9543 51.6623 28 51.6623C41.0479 51.6623 51.6623 41.0479 51.6623 28C51.6623 14.9521 41.0457 4.3377 28 4.3377Z"/>
-                        <path d="M38.8088 25.9997L28.9146 35.8571C28.1428 36.622 26.8962 36.622 26.1244 35.8571L16.2302 25.9997C15.5951 25.2624 15.5951 24.1721 16.2302 23.4348C16.9406 22.6087 18.1912 22.5122 19.0204 23.22L27.5096 31.6775L36.0186 23.2199C36.7904 22.4549 38.037 22.4549 38.8088 23.2199C39.5766 23.9888 39.5766 25.2309 38.8088 25.9997Z"/>
-                    </svg>
-                </div>
+        </div>
+        <div class="sidebar__slider-btn">
+            <div>
+                <svg width="3.5625rem" height="3.5rem" viewBox="0 0 57 56" fill="#B4B4B4"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M28.875 0C44.3151 0 56.875 12.5599 56.875 28C56.875 43.4401 44.3151 56 28.875 56C13.4349 56 0.875 43.438 0.875 28C0.875 12.562 13.4349 0 28.875 0ZM28.875 51.6623C41.9207 51.6623 52.5373 41.0479 52.5373 28C52.5373 14.9521 41.9207 4.3377 28.875 4.3377C15.8271 4.3377 5.2127 14.9521 5.2127 28C5.2127 41.0479 15.8293 51.6623 28.875 51.6623Z"/>
+                    <path d="M18.0662 30.0003L27.9604 20.1429C28.7322 19.378 29.9788 19.378 30.7506 20.1429L40.6448 30.0003C41.2799 30.7376 41.2799 31.8279 40.6448 32.5652C39.9344 33.3913 38.6838 33.4878 37.8546 32.78L29.3654 24.3225L20.8564 32.7801C20.0846 33.5451 18.838 33.5451 18.0662 32.7801C17.2984 32.0112 17.2984 30.7691 18.0662 30.0003Z"/>
+                </svg>
+            </div>
+            <div>
+                <svg width="3.5rem" height="3.5rem" viewBox="0 0 56 56" fill="#B4B4B4"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M28 56C12.5599 56 0 43.4401 0 28C0 12.5599 12.5599 0 28 0C43.4401 0 56 12.562 56 28C56 43.438 43.4401 56 28 56ZM28 4.3377C14.9543 4.3377 4.3377 14.9521 4.3377 28C4.3377 41.0479 14.9543 51.6623 28 51.6623C41.0479 51.6623 51.6623 41.0479 51.6623 28C51.6623 14.9521 41.0457 4.3377 28 4.3377Z"/>
+                    <path d="M38.8088 25.9997L28.9146 35.8571C28.1428 36.622 26.8962 36.622 26.1244 35.8571L16.2302 25.9997C15.5951 25.2624 15.5951 24.1721 16.2302 23.4348C16.9406 22.6087 18.1912 22.5122 19.0204 23.22L27.5096 31.6775L36.0186 23.2199C36.7904 22.4549 38.037 22.4549 38.8088 23.2199C39.5766 23.9888 39.5766 25.2309 38.8088 25.9997Z"/>
+                </svg>
             </div>
         </div>
     </div>
@@ -228,15 +228,14 @@
             <div class="content__info">
                 <div class="content__navbar">
                     <ul class="tab">
-                        <li>
-                            <a class="tablinks" onclick="openTab(event, 'main')" href="#">Основное</a>
+                        <li class="tablinks" onclick="openTab(event, 'main')">
+                            Основное
                         </li>
-                        <li>
-                            <a id="defaultOpen" class="tablinks" onclick="openTab(event, 'personal')"
-                               href="#">Личное</a>
+                        <li id="defaultOpen" class="tablinks" onclick="openTab(event, 'personal')">
+                            Личное
                         </li>
-                        <li>
-                            <a class="tablinks active" onclick="openTab(event, 'stack')" href="#">Stack</a>
+                        <li class="tablinks active" onclick="openTab(event, 'stack')" >
+                            Stack
                         </li>
                     </ul>
                     <div class="content__action">
