--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 <body>
 <div class="page">
     <div class="sidebar">
+        <div id="layout" class="sidebar__layout"></div>
         <div class="sidebar__control">
             <div class="sidebar__control-list">
                 <div class="sidebar__filter">
@@ -32,7 +33,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="sidebar__add-user">
+            <div onclick="openModal()" class="sidebar__add-user">
                 <div class="shadow-box">
                     <svg width="2.5rem" height="2.5rem" viewBox="0 0 40 40" fill="none"
                          xmlns="http://www.w3.org/2000/svg">
@@ -196,7 +197,7 @@
             </div>
         </div>
     </div>
-    <div class="content">
+    <div id="content" class="content">
         <div class="content__account">
             <div class="content__avatar">
                 <img src="./images/avatar.png" alt="ava">
@@ -212,8 +213,10 @@
                 </p>
                 <div>
                     <div class="content__tooltip">
-                        <svg width="3.375rem" height="3.125rem" viewBox="0 0 54 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M48.1819 0H5.8185C2.60994 0 0 2.41661 0 5.3875V34.1217C0 37.0922 2.60994 39.5088 5.8185 39.5088H19.2443L23.6905 47.7428C24.465 49.1772 25.6713 50 27 50C28.3287 50 29.535 49.1772 30.3095 47.7428L34.7561 39.5088H48.1819C51.3901 39.5088 54 37.0922 54 34.1217V5.3875C54 2.41661 51.3901 0 48.1819 0V0ZM50.8359 34.1217C50.8359 35.4767 49.6453 36.5791 48.1819 36.5791H33.7784C33.179 36.5791 32.6315 36.8927 32.3633 37.389L27.4796 46.4325C27.2826 46.7972 27.0976 46.9765 27 47.0451C26.9024 46.9765 26.7174 46.7972 26.5204 46.4325L21.6367 37.389C21.369 36.8927 20.821 36.5791 20.222 36.5791H5.8185C4.35471 36.5791 3.16406 35.4767 3.16406 34.1217V5.3875C3.16406 4.03214 4.35471 2.92969 5.8185 2.92969H48.1819C49.6453 2.92969 50.8359 4.03214 50.8359 5.3875V34.1217Z" fill="#00C96F"/>
+                        <svg width="3.375rem" height="3.125rem" viewBox="0 0 54 50" fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M48.1819 0H5.8185C2.60994 0 0 2.41661 0 5.3875V34.1217C0 37.0922 2.60994 39.5088 5.8185 39.5088H19.2443L23.6905 47.7428C24.465 49.1772 25.6713 50 27 50C28.3287 50 29.535 49.1772 30.3095 47.7428L34.7561 39.5088H48.1819C51.3901 39.5088 54 37.0922 54 34.1217V5.3875C54 2.41661 51.3901 0 48.1819 0V0ZM50.8359 34.1217C50.8359 35.4767 49.6453 36.5791 48.1819 36.5791H33.7784C33.179 36.5791 32.6315 36.8927 32.3633 37.389L27.4796 46.4325C27.2826 46.7972 27.0976 46.9765 27 47.0451C26.9024 46.9765 26.7174 46.7972 26.5204 46.4325L21.6367 37.389C21.369 36.8927 20.821 36.5791 20.222 36.5791H5.8185C4.35471 36.5791 3.16406 35.4767 3.16406 34.1217V5.3875C3.16406 4.03214 4.35471 2.92969 5.8185 2.92969H48.1819C49.6453 2.92969 50.8359 4.03214 50.8359 5.3875V34.1217Z"
+                                  fill="#00C96F"/>
                             <text x="50%" y="50%" class="percentage content__tooltip--percentage ">71%</text>
                         </svg>
                     </div>
@@ -231,16 +234,16 @@
                         <li class="tablinks" onclick="openTab(event, 'main')">
                             Основное
                         </li>
-                        <li id="defaultOpen" class="tablinks" onclick="openTab(event, 'personal')">
+                        <li class="tablinks" onclick="openTab(event, 'personal')">
                             Личное
                         </li>
-                        <li class="tablinks active" onclick="openTab(event, 'stack')" >
+                        <li id="defaultOpen" class="tablinks active" onclick="openTab(event, 'stack')">
                             Stack
                         </li>
                     </ul>
                     <div class="content__action">
                         <div class="vertical-separator"></div>
-                        <div class="shadow-box">
+                        <div onclick="openModal()" class="shadow-box">
                             <svg width="2.5rem" height="2.5rem" viewBox="0 0 40 40" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 40C31.0457 40 40 31.0457 40 20C40 8.9543 31.0457 0 20 0C8.9543 0 0 8.9543 0 20C0 31.0457 8.9543 40 20 40Z"
@@ -377,8 +380,122 @@
             </div>
         </div>
     </div>
+    <div id="modal" class="modal">
+        <div class="modal__nav">
+            <div class="modal__title">
+                <h1>Новый пользователь</h1>
+            </div>
+            <div class="modal__control">
+                <button>Сохранить</button>
+                <div onclick="closeModal()">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.6571 15L29.6565 2.00058C30.1142 1.5429 30.1142 0.800873 29.6565 0.343256C29.1989 -0.11436 28.4568 -0.114419 27.9992 0.343256L14.9997 13.3427L2.00033 0.343256C1.54266 -0.114419 0.800628 -0.114419 0.343012 0.343256C-0.114604 0.800931 -0.114663 1.54296 0.343012 2.00058L13.3424 15L0.343012 27.9995C-0.114663 28.4571 -0.114663 29.1992 0.343012 29.6568C0.57182 29.8856 0.871761 30 1.1717 30C1.47164 30 1.77152 29.8856 2.00039 29.6568L14.9997 16.6574L27.9991 29.6568C28.228 29.8856 28.5279 30 28.8278 30C29.1278 30 29.4277 29.8856 29.6565 29.6568C30.1142 29.1991 30.1142 28.4571 29.6565 27.9995L16.6571 15Z"
+                              fill="black"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="modal__steps">
+            <div class="modal__step">
+                <div>
+                    <p>Шаг 1</p>
+                    <p>основное</p>
+                </div>
+            </div>
+            <div class="modal__step">
+                <div>
+                    <p>Шаг 2</p>
+                    <p>личное</p>
+                </div>
+            </div>
+            <div class="modal__step">
+                <div>
+                    <p>Шаг 3</p>
+                    <p>stack</p>
+                </div>
+            </div>
+        </div>
+        <div class="modal__add-photo">
+            <div class="modal__title">
+                <h1>Загрузите фото</h1>
+            </div>
+            <div class="modal__drop-items">
+                <div class="modal__drop modal__drop__image">
+                    <svg width="5.3125rem" height="4.9375rem" viewBox="0 0 85 79" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z"
+                              fill="white"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8996 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.068 39.9073 41.4092 39.6347Z"
+                              fill="white"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2887 39.33 40.1659 39.33 39.4753 40.0207C38.7846 40.7113 38.7846 41.834 39.4753 42.5247L46.5587 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z"
+                              fill="white"/>
+                    </svg>
+
+                    <img src="images/drop-images.png" alt="avatar">
+                </div>
+                <div class="modal__drop">
+                    <svg width="5.3125rem" height="4.9375rem" viewBox="0 0 85 79" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z"
+                              fill="#00CF6A"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8995 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.0679 39.9073 41.4092 39.6347Z"
+                              fill="#00CF6A"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2886 39.33 40.1659 39.33 39.4752 40.0207C38.7846 40.7113 38.7846 41.834 39.4752 42.5247L46.5586 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z"
+                              fill="#00CF6A"/>
+                    </svg>
+                </div>
+                <div class="modal__drop">
+                    <svg width="5.3125rem" height="4.9375rem" viewBox="0 0 85 79" fill="none"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M66.7463 21.8731C64.2847 9.61189 53.3553 0.541626 40.7291 0.541626C26.0807 0.541626 14.1666 12.4557 14.1666 27.1041C14.1666 27.7026 14.1913 28.3154 14.2445 28.9635C6.25099 29.8135 0 36.5959 0 44.8125C0 53.5994 7.15063 60.75 15.9375 60.75H33.6459C34.6234 60.75 35.4168 59.9566 35.4168 58.9791C35.4168 58.0016 34.6234 57.2082 33.6459 57.2082H15.9375C9.10214 57.2082 3.54161 51.6479 3.54161 44.8123C3.54161 37.9768 9.10197 32.4165 15.8206 32.413C15.8985 32.4271 16.1146 32.4483 16.1925 32.4483C16.6459 32.3705 17.2054 32.2358 17.5525 31.8498C17.896 31.4602 18.0519 30.9396 17.9775 30.4261C17.7934 29.1511 17.7084 28.0957 17.7084 27.104C17.7084 14.4106 28.0359 4.08307 40.7293 4.08307C52.1015 4.08307 61.8871 12.5759 63.4915 23.8384C63.6155 24.7132 64.6 25.3331 65.4855 25.3331C74.1839 25.2091 81.4584 32.4696 81.4584 41.2706C81.4584 50.0574 74.3078 57.2081 65.5209 57.2081H47.8125C46.835 57.2081 46.0416 58.0015 46.0416 58.979C46.0416 59.9565 46.835 60.7498 47.8125 60.7498H65.5209C76.2628 60.75 85 52.0128 85 41.2709C85 31.0319 77.0596 22.6134 66.7463 21.8731Z"
+                              fill="#00CF6A"/>
+                        <path d="M41.4092 39.6347C40.7433 39.3549 39.9889 39.5107 39.4789 40.0172L32.3955 47.1006C31.7049 47.7912 31.7049 48.9139 32.3955 49.6046C33.0862 50.2952 34.2089 50.2952 34.8995 49.6046L38.9583 45.5458V76.6875C38.9583 77.665 39.7517 78.4584 40.7292 78.4584C41.7067 78.4584 42.5001 77.665 42.5001 76.6875V41.2709C42.5001 40.5554 42.0679 39.9073 41.4092 39.6347Z"
+                              fill="#00CF6A"/>
+                        <path d="M49.0627 47.104L41.9793 40.0207C41.2886 39.33 40.1659 39.33 39.4752 40.0207C38.7846 40.7113 38.7846 41.834 39.4752 42.5247L46.5586 49.6081C46.9058 49.9515 47.359 50.1252 47.8124 50.1252C48.2658 50.1252 48.719 49.9517 49.0627 49.6081C49.7533 48.9173 49.7533 47.7947 49.0627 47.104Z"
+                              fill="#00CF6A"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="modal__form">
+            <div class="modal__title">
+                <h1>Заполните форму</h1>
+            </div>
+            <div class="modal__inputs">
+
+
+                <div class="modal__input-wrapper">
+                    <div class="modal__input-data">
+                        <input type="text" required>
+                        <label>Ваше имя</label>
+                    </div>
+                </div>
+
+
+                <div class="modal__input-wrapper">
+                    <div class="modal__input-data">
+                        <input type="text" required>
+                        <label>Ваша фамилия</label>
+                    </div>
+                </div>
+
+
+                <div class="modal__input-wrapper">
+                    <div class="modal__input-data">
+                        <input type="text" required>
+                        <label style="letter-spacing: -.09rem;">Ваша должность</label>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
 </div>
 <script>
+    //open tab function
     function openTab(evt, tab) {
         let i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tabcontent");
@@ -393,7 +510,29 @@
         evt.currentTarget.className += " active";
     }
 
+
+    //open default tab
     document.getElementById("defaultOpen").click();
+
+
+    // modal function
+    let modal = document.getElementById("modal");
+
+    let layout = document.getElementById("layout");
+
+    let content = document.getElementById("content");
+
+    function openModal() {
+        modal.style.display = "block";
+        layout.style.display = "block";
+        content.style.display = "none";
+    }
+
+    function closeModal() {
+        modal.style.display = "none";
+        layout.style.display = "none";
+        content.style.display = "block";
+    }
 </script>
 </body>
 </html>
